added illinois bears

--- a/index.html
+++ b/index.html
@@ -122,12 +122,22 @@
   <div class="content content--store">
     <h1 class="shop-header"><span class="icon--tshirt"></span>T-Shirts</h1>
 
+    <a class="shop-item" href="https://cottonbureau.com/people/jared-rauh" target="_blank">
+      <div class="shop-item-inner">
+        <img src='img/shirt/tshirt_illinois-bears.png'>
+        <div class="card-title">
+          <span class="shop-item--title"><p>Illinois Bears</p></span>
+          <p class="shop-item--price">$22+<span class="tag--new">New!</span></p>
+        </div>
+      </div>
+    </a>
+
     <a class="shop-item" href="https://cottonbureau.com/products/loon-lover" target="_blank">
       <div class="shop-item-inner">
         <img src='img/shirt/tshirt_loon-lover.png'>
         <div class="card-title">
-          <span class="shop-item--title"><p>Loon Lover</p></span>
-          <p class="shop-item--price">$25</p>
+          <span class="shop-item--title sold-out"><p>Loon Lover</p></span>
+          <p class="shop-item--price sold-out" style="font-style: strikethrough;">Sold Out</p>
         </div>
       </div>
     </a>
