updated florida fins

--- a/index.html
+++ b/index.html
@@ -132,22 +132,22 @@
       </div>
     </a>
 
+    <a class="shop-item" href="https://www.thehomet.com/products/florida-fins" target="_blank">
+      <div class="shop-item-inner">
+        <img src='img/shirt/tshirt_fins.png'>
+        <div class="card-title">
+          <span class="shop-item--title"><p>Florida Fins</p></span>
+          <p class="shop-item--price">$30</p>
+        </div>
+      </div>
+    </a>
+
     <a class="shop-item" href="https://cottonbureau.com/products/loon-lover" target="_blank">
       <div class="shop-item-inner">
         <img src='img/shirt/tshirt_loon-lover.png'>
         <div class="card-title">
           <span class="shop-item--title sold-out"><p>Loon Lover</p></span>
-          <p class="shop-item--price sold-out" style="font-style: strikethrough;">Sold Out</p>
-        </div>
-      </div>
-    </a>
-
-    <a class="shop-item" href="https://cottonbureau.com/products/florida-fins" target="_blank">
-      <div class="shop-item-inner">
-        <img src='img/shirt/tshirt_fins.png'>
-        <div class="card-title">
-          <span class="shop-item--title"><p>Florida Fins</p></span>
-          <p class="shop-item--price">$28</p>
+          <p class="shop-item--price sold-out">Sold Out</p>
         </div>
       </div>
     </a>
