added 2 new shirts

--- a/index.html
+++ b/index.html
@@ -122,12 +122,22 @@
   <div class="content content--store">
     <h1 class="shop-header"><span class="icon--tshirt"></span>T-Shirts</h1>
 
-    <a class="shop-item" href="https://cottonbureau.com/people/jared-rauh" target="_blank">
+    <a class="shop-item" href="https://cottonbureau.com/products/tennis-love" target="_blank">
       <div class="shop-item-inner">
-        <img src='img/shirt/tshirt_illinois-bears.png'>
+        <img src='img/shirt/tshirt_tennis-love.png'>
         <div class="card-title">
-          <span class="shop-item--title"><p>Illinois Bears</p></span>
-          <p class="shop-item--price">$22+<span class="tag--new">New!</span></p>
+          <span class="shop-item--title"><p>Tennis Love</p></span>
+          <p class="shop-item--price">$28<span class="tag--new">New!</span></p>
+        </div>
+      </div>
+    </a>
+
+    <a class="shop-item" href="https://cottonbureau.com/products/love-language" target="_blank">
+      <div class="shop-item-inner">
+        <img src='img/shirt/tshirt_love-language.png'>
+        <div class="card-title">
+          <span class="shop-item--title"><p>Love Language</p></span>
+          <p class="shop-item--price">$26+<span class="tag--new">New!</span></p>
         </div>
       </div>
     </a>
@@ -146,8 +156,8 @@
       <div class="shop-item-inner">
         <img src='img/shirt/tshirt_loon-lover.png'>
         <div class="card-title">
-          <span class="shop-item--title sold-out"><p>Loon Lover</p></span>
-          <p class="shop-item--price sold-out">Sold Out</p>
+          <span class="shop-item--title"><p>Loon Lover</p></span>
+          <p class="shop-item--price">$27+</p>
         </div>
       </div>
     </a>
